jenkins/jenkins-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins-sa
      nodeSelector:
        kubernetes.io/hostname: k8s-node03
      securityContext:
        runAsUser: 0
        fsGroup: 0
      containers:
        - name: jenkins
          image: rosescent00/jenkins-full:latest
          ports:
            - containerPort: 8080
            - containerPort: 50000
          volumeMounts:
            - name: jenkins-data
              mountPath: /var/jenkins_home
            - name: docker-sock
              mountPath: /var/run/docker.sock  # ← 여기 추가
      volumes:
        - name: jenkins-data
          persistentVolumeClaim:
            claimName: jenkins-pvc
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock         # ← 여기 추가
            type: Socket
